--- a/latex/main.tex
+++ b/latex/main.tex
@@ -14,7 +14,8 @@
 %
 % If you use the hyperref package, please uncomment the following line
 % to display URLs in blue roman font according to Springer's eBook style:
-% \renewcommand\UrlFont{\color{blue}\rmfamily}
+\renewcommand\UrlFont{\color{blue}\rmfamily}
+
 
 \begin{document}
 %
