Add DRIU reference

--- a/latex/references.bib
+++ b/latex/references.bib
@@ -66,3 +66,18 @@
 	pages = {130--137},
 	file = {Full Text PDF:/home/fernando/Zotero/storage/A55ZFESQ/Frangi et al. - 1998 - Multiscale vessel enhancement filtering.pdf:application/pdf;Snapshot:/home/fernando/Zotero/storage/PUMWZISX/BFb0056195.html:text/html}
 }
+
+@article{maninis_deep_2016,
+	title = {Deep {Retinal} {Image} {Understanding}},
+	volume = {9901},
+	url = {http://arxiv.org/abs/1609.01103},
+	doi = {10.1007/978-3-319-46723-8_17},
+	abstract = {This paper presents Deep Retinal Image Understanding (DRIU), a unified framework of retinal image analysis that provides both retinal vessel and optic disc segmentation. We make use of deep Convolutional Neural Networks (CNNs), which have proven revolutionary in other fields of computer vision such as object detection and image classification, and we bring their power to the study of eye fundus images. DRIU uses a base network architecture on which two set of specialized layers are trained to solve both the retinal vessel and optic disc segmentation. We present experimental validation, both qualitative and quantitative, in four public datasets for these tasks. In all of them, DRIU presents super-human performance, that is, it shows results more consistent with a gold standard than a second human annotator used as control.},
+	urldate = {2018-03-21},
+	journal = {arXiv:1609.01103 [cs]},
+	author = {Maninis, Kevis-Kokitsi and Pont-Tuset, Jordi and Arbeláez, Pablo and Van Gool, Luc},
+	year = {2016},
+	note = {arXiv: 1609.01103},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition},
+	pages = {140--148}
+}
