Add VGG reference

--- a/latex/references.bib
+++ b/latex/references.bib
@@ -28,7 +28,7 @@
 	author = {Staal, J. and Abramoff, M. D. and Niemeijer, M. and Viergever, M. A. and Ginneken, B. van},
 	month = apr,
 	year = {2004},
-	keywords = {image segmentation, Image segmentation, eye, medical image processing, feature extraction, Algorithms, automated segmentation, classifier, Cluster Analysis, Color, Databases, Factual, Diabetes, diabetic retinopathy, Diabetic Retinopathy, Expert Systems, Fluorescein Angiography, Humans, Image analysis, Image databases, Image Interpretation, Computer-Assisted, image ridge extraction, Ophthalmoscopy, Pattern Recognition, Automated, Pixel, Reproducibility of Results, retina, Retina, Retinal Vessels, Retinopathy, ridge-based vessel segmentation, Sensitivity and Specificity, sequential forward feature selection, Spatial databases, Testing, two-dimensional color images},
+	keywords = {Algorithms, automated segmentation, classifier, Cluster Analysis, Color, Databases, Factual, Diabetes, diabetic retinopathy, Diabetic Retinopathy, Expert Systems, eye, feature extraction, Fluorescein Angiography, Humans, Image analysis, Image databases, Image Interpretation, Computer-Assisted, image ridge extraction, image segmentation, Image segmentation, medical image processing, Ophthalmoscopy, Pattern Recognition, Automated, Pixel, Reproducibility of Results, retina, Retina, Retinal Vessels, Retinopathy, ridge-based vessel segmentation, Sensitivity and Specificity, sequential forward feature selection, Spatial databases, Testing, two-dimensional color images},
 	pages = {501--509},
 	file = {IEEE Xplore Abstract Record:/home/fernando/Zotero/storage/PPGPQW8R/1282003.html:text/html;IEEE Xplore Full Text PDF:/home/fernando/Zotero/storage/4EKSV8BE/Staal et al. - 2004 - Ridge-based vessel segmentation in color images of.pdf:application/pdf}
 }
@@ -67,6 +67,24 @@
 	file = {Full Text PDF:/home/fernando/Zotero/storage/A55ZFESQ/Frangi et al. - 1998 - Multiscale vessel enhancement filtering.pdf:application/pdf;Snapshot:/home/fernando/Zotero/storage/PUMWZISX/BFb0056195.html:text/html}
 }
 
+@incollection{sudre_generalised_2017,
+	series = {Lecture {Notes} in {Computer} {Science}},
+	title = {Generalised {Dice} {Overlap} as a {Deep} {Learning} {Loss} {Function} for {Highly} {Unbalanced} {Segmentations}},
+	isbn = {978-3-319-67557-2 978-3-319-67558-9},
+	url = {https://link.springer.com/chapter/10.1007/978-3-319-67558-9_28},
+	abstract = {Deep-learning has proved in recent years to be a powerful tool for image analysis and is now widely used to segment both 2D and 3D medical images. Deep-learning segmentation frameworks rely not only on the choice of network architecture but also on the choice of loss function. When the segmentation process targets rare observations, a severe class imbalance is likely to occur between candidate labels, thus resulting in sub-optimal performance. In order to mitigate this issue, strategies such as the weighted cross-entropy function, the sensitivity function or the Dice loss function, have been proposed. In this work, we investigate the behavior of these loss functions and their sensitivity to learning rate tuning in the presence of different rates of label imbalance across 2D and 3D segmentation tasks. We also propose to use the class re-balancing properties of the Generalized Dice overlap, a known metric for segmentation assessment, as a robust and accurate deep-learning loss function for unbalanced tasks.},
+	language = {en},
+	urldate = {2018-03-20},
+	booktitle = {Deep {Learning} in {Medical} {Image} {Analysis} and {Multimodal} {Learning} for {Clinical} {Decision} {Support}},
+	publisher = {Springer, Cham},
+	author = {Sudre, Carole H. and Li, Wenqi and Vercauteren, Tom and Ourselin, Sebastien and Cardoso, M. Jorge},
+	month = sep,
+	year = {2017},
+	doi = {10.1007/978-3-319-67558-9_28},
+	pages = {240--248},
+	file = {Full Text PDF:/home/fernando/Zotero/storage/QISRLZXY/Sudre et al. - 2017 - Generalised Dice Overlap as a Deep Learning Loss F.pdf:application/pdf;Snapshot:/home/fernando/Zotero/storage/GU5ZHHAV/978-3-319-67558-9_28.html:text/html}
+}
+
 @article{maninis_deep_2016,
 	title = {Deep {Retinal} {Image} {Understanding}},
 	volume = {9901},
@@ -79,5 +97,20 @@
 	year = {2016},
 	note = {arXiv: 1609.01103},
 	keywords = {Computer Science - Computer Vision and Pattern Recognition},
-	pages = {140--148}
+	pages = {140--148},
+	file = {arXiv\:1609.01103 PDF:/home/fernando/Zotero/storage/23SJUZ7D/Maninis et al. - 2016 - Deep Retinal Image Understanding.pdf:application/pdf;arXiv.org Snapshot:/home/fernando/Zotero/storage/RH9V2I6L/1609.html:text/html}
+}
+
+@article{simonyan_very_2014,
+	title = {Very {Deep} {Convolutional} {Networks} for {Large}-{Scale} {Image} {Recognition}},
+	url = {http://arxiv.org/abs/1409.1556},
+	abstract = {In this work we investigate the effect of the convolutional network depth on its accuracy in the large-scale image recognition setting. Our main contribution is a thorough evaluation of networks of increasing depth using an architecture with very small (3x3) convolution filters, which shows that a significant improvement on the prior-art configurations can be achieved by pushing the depth to 16-19 weight layers. These findings were the basis of our ImageNet Challenge 2014 submission, where our team secured the first and the second places in the localisation and classification tracks respectively. We also show that our representations generalise well to other datasets, where they achieve state-of-the-art results. We have made our two best-performing ConvNet models publicly available to facilitate further research on the use of deep visual representations in computer vision.},
+	urldate = {2018-03-21},
+	journal = {arXiv:1409.1556 [cs]},
+	author = {Simonyan, Karen and Zisserman, Andrew},
+	month = sep,
+	year = {2014},
+	note = {arXiv: 1409.1556},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition},
+	file = {arXiv\:1409.1556 PDF:/home/fernando/Zotero/storage/VIRJDK2W/Simonyan and Zisserman - 2014 - Very Deep Convolutional Networks for Large-Scale I.pdf:application/pdf;arXiv.org Snapshot:/home/fernando/Zotero/storage/EUI9Z7WL/1409.html:text/html}
 }
