--- a/latex/main.tex
+++ b/latex/main.tex
@@ -19,7 +19,7 @@
 
 \begin{document}
 %
-\title{MPHYGB07 Coursework}
+\title{Computer-assisted Surgery and Therapy Coursework}
 %
 %\titlerunning{Abbreviated paper title}
 % If the paper title is too long for the running head, you can set
@@ -37,7 +37,7 @@ University College London, United Kingdom}
 \maketitle              % typeset the header of the contribution
 
 
-\input{chapters/example}
+% \input{chapters/example}
 \input{chapters/1_intro}
 \input{chapters/2_technical_summary}
 \input{chapters/3_hands_on}
