Use inline figures

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -6,6 +6,7 @@
 
 \usepackage[utf8]{inputenc}  % for my name
 \usepackage{hyperref}        % hyperlinks
+\usepackage{float}           % inline figures
 
 %
 \usepackage{graphicx}
