--- a/latex/main.tex
+++ b/latex/main.tex
@@ -16,6 +16,7 @@
 % If you use the hyperref package, please uncomment the following line
 % to display URLs in blue roman font according to Springer's eBook style:
 \renewcommand\UrlFont{\color{blue}\rmfamily}
+\setlength{\intextsep}{1cm}
 
 
 \begin{document}
