--- a/latex/main.tex
+++ b/latex/main.tex
@@ -22,14 +22,15 @@
 \begin{document}
 %
 \title{Computer-assisted Surgery and Therapy Coursework}
+\subtitle{26 March 2018}
 %
 %\titlerunning{Abbreviated paper title}
 % If the paper title is too long for the running head, you can set
 % an abbreviated paper title here
 %
-\author{Fernando Pérez-García \inst{1,2}\orcidID{0000-0001-9090-3024}}
+\author{Fernando {Pérez García} \inst{1,2}\orcidID{0000-0001-9090-3024}}
 %
-\authorrunning{F. Pérez-García}
+\authorrunning{F. {Pérez García}}
 % First names are abbreviated in the running head.
 % If there are more than two authors, 'et al.' is used.
 %
